# AITK

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
aitk/: __init__.py
aitk/tasks/: app_info.py  task_1.py  tasks.jsonl
aitk/translators/: autoglm.py  base.py  infigui_g1.py  infigui_r1.py  qwen25_vl.py  qwen3_vl.py  ui_genie.py  ui_tars.py  ui_venus.py
aitk/utils/: adb_controller.py  appium_controller.py  avd_manager.py  controller.py  image_utils.py  keycode.py  register.py  som.py  visualizer.py  xml_processor.py
configs/: controller.yaml  eval.yaml
docs/: config.md  setup.md  task.md  translator.md
saves/qwen25vl_test/task_1/states/xmls/: step_7.xml
scripts/: infer.py  init_avd.py  interact.py  m_annotator.py  multi_run.sh  single_run.sh  start_avd.py  visualizer.py  win_multi_run.ps1  win_single_run.ps1
tasks/: new_task_log.jsonl  noisy_tasks.jsonl  tasks.jsonl
