[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aitk"
dynamic = ["version"]
description = "Android Interaction Toolkit"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Yuxiang Chai" },
]

[project.urls]
Homepage = "https://github.com/YuxiangChai/AITK"

[tool.hatch.version]
path = "aitk/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/aitk",
]
